Tests/CompilerTests/positive/generic-bundle.hylo
//! no-std

struct A { public memberwise init }
struct B { public memberwise init }

fun f<T>(x: auto T) auto -> B {
  sink  { (x, B()) }
  inout { B() }
}

fun check<T>(x: T) {}

public fun main() {
  var a = A()
  check<B>(f(&a))
  check<{A, B}>(f(a))
}
